# graphics-programming-2026

./: .gitignore  CMakeLists.txt
exercises/: CMakeLists.txt  exercise_01.html  exercise_02.html  exercise_06.html  style.css
exercises/exercise00/: main.cpp
exercises/exercise01/: TerrainApplication.cpp  TerrainApplication.h
iceCaveApp/: CMakeLists.txt
iceCaveApp/Resource Files/Shaders/: background.frag  default.vert
iceCaveApp/src/: CMakeLists.txt  main.cpp  shaderClass.cpp  shaderClass.h
libraries/itugl/: CMakeLists.txt
libraries/itugl/include/ituGL/core/: Data.h
libraries/itugl/include/ituGL/scene/: Bounds.h
libraries/itugl/src/ituGL/asset/: Texture2DLoader.cpp  TextureCubemapLoader.cpp
libraries/itugl/src/ituGL/shader/: Shader.cpp  ShaderProgram.cpp
playground/: CMakeLists.txt
playground/Resource Files/Shaders/: default.frag  default.vert
playground/cExercise00/: CMakeLists.txt  main.cpp
playground/openGLPlayground/: main.cpp  main.h  shaderClass.cpp
